Update for some completed "Of Concern" findbugs checks.